try to fix nav-top problem on IOS again

--- a/resources/sass/ultimate.sass
+++ b/resources/sass/ultimate.sass
@@ -47,7 +47,7 @@ $size: 28px
             font-family: 'M PLUS 1p', sans-serif
             font-size: $size
             line-height: $size
-            // transform: translate(-1.5px, -4px) rotateX(15deg) perspective(.5rem)
+            transform: translate(-1.5px, -4px) perspective(.5rem) rotateX(15deg)
             text-shadow: 0 0 1px rgba(1, 178, 104, 1), 0 0 2px rgba(1, 178, 104, 1), 0 0 3px rgba(1, 178, 104, .8)
         &:hover
             color: white
